﻿Change Log
==========

1.0.10
------

Changed
- Bug Fixes
 - Fix inconsistent use of XML entities for compression in RdfXmlWriter (CORE-453)
 - Disable HTTP Keep Alive by default as it can cause errors under some circumstances (CORE-454)
- Dependencies
 - Upgrade OpenLink.Data.Virtuoso to 7.20.3214.1 (VIRT-359)
  - Note that this removes support for Virtuoso on .Net Client Profile

1.0.9
-----

Changed
- Bug Fixes
 - Performance fixes for query evaluation over virtual graphs (CORE-449, CORE-450, CORE-451, CORE-452)
 - BaseEndpoint now permits more access to the HttpWebRequest prior to issuing it to allow for extra customisation (CORE-448)
 - AllegroGraph compatibility issue with incorrect MIME type for saving data (CORE-447)
 - SPARQL Query Parser was overly strict with some aggregate containing queries where the GROUP BY was implicit (CORE-446)
 - Fixes for Stardog 3.x support (CORE-443)
 - Improvements to multi-threaded performance when using URI Interning
- Dependencies
 - Upgrade VDS.Common to 1.6.0

1.0.8
-----

Changed
- Bug Fixes
 - Some SPARQL parsers did not handle bad URIs gracefully i.e. did not provide informative errors (CORE-432)
 - SPARQL CSV parser reject variable names in header row if CSV quoted values are used (CORE-433)
 - Accessing remote SPARQL endpoints could fail to include default & named graph parameters if POSTing the queries (CORE-434)
 - Fix possible exception when evaluating a query with a ORDER BY and LIMIT over a cross product (CORE-437)
 - Lazy query evaluation can cause an apparent infinite loop (i.e. extremely slow query evaluation) in some cases (CORE-439)
 - Fix typo in MIME type definitions for NTriples
 - Fix bug where HAVING clause that used aggregates could fail to evaluate correctly if project expressions were also used (CORE-440)
 - Fix bug in evaluation of the zero length portion of * paths causing incorrect results (CORE-441)
- Build
 - Upgrade PCL build to Profile 328
- Dependencies
 - Upgrade VDS.Common to 1.5.0