@@ -8,6 +8,7 @@ Changed
 - Bug Fixes
  - Fix inconsistent use of XML entities for compression in RdfXmlWriter (CORE-453)
  - Disable HTTP Keep Alive by default as it can cause errors under some circumstances (CORE-454)
+ - Fix bug with ToString() form of SparqlQuery not being round trippable in some cases (CORE-458)
 - Dependencies
  - Upgrade OpenLink.Data.Virtuoso to 7.20.3214.1 (VIRT-359)
   - Note that this removes support for Virtuoso on .Net Client Profile
